plugins {
    id('java')
}

group 'com.tsystems.wsdldoc'
version '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.predic8:soa-model-core:2.0.1'
    implementation 'org.freemarker:freemarker:2.3.32'
    implementation 'commons-cli:commons-cli:1.3.1'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.10.1'
}

jar {
    manifest {
        attributes(
                'Manifest-Version': '1.0',
                'Main-Class': 'com.tsystems.wsdldoc.Main',
//                'Class-Path': configurations.runtime.files.collect { "$it.name" }.join(' ') + ' .'
        )
    }
//    from {
//        configurations.runtime.collect { it.isDirectory() ? it : zipTree(it) }
//    }
}

